# MulleLoadTwoUniverses

./: CMakeLists.txt  MulleLoadTwoUniverses.code-workspace  README.md  run-load-two-universes
.mulle-env/etc/: environment-global.sh
.mulle-env/share/: environment-extension.sh  environment-project.sh
.mulle-sde/share/ignore.d/: 30-subproject--none
.mulle-sourcetree/etc/: config
cmake/: HeadersAndSources.cmake  _Dependencies.cmake  _Headers.cmake  _Libraries.cmake  _Sources.cmake
cmake/share/: CreateLoaderIncObjC.cmake  Environment.cmake  ExecutableObjC.cmake  LinkManifestC.cmake  OptimizedLinkObjC.cmake  StandaloneC.cmake  StartupC.cmake
src/: _MulleLoadTwoUniverses-import-private.h  _MulleLoadTwoUniverses-import.h  _MulleLoadTwoUniverses-include-private.h  _MulleLoadTwoUniverses-include.h  import-private.h  import.h  include-private.h  include.h  main.c  version.h
src/plugin1/: CMakeLists.txt  MulleObjCLoader+plugin1.h  MulleObjCLoader+plugin1.m  _plugin1-import-private.h  _plugin1-import.h  _plugin1-include-private.h  _plugin1-include.h  import-private.h  import.h  include-private.h  include.h  plugin1-standalone.m  plugin1.h  plugin1.m
src/plugin1/.mulle-env/share/: environment-project.sh  include-environment.sh
src/plugin1/.mulle-sde/share/: extension
src/plugin1/.mulle-sourcetree/etc/: config
src/plugin1/cmake/: HeadersAndSources.cmake  _Dependencies.cmake  _Headers.cmake  _Sources.cmake
src/plugin1/cmake/share/: CreateLoaderIncObjC.cmake  Environment.cmake  ExecutableObjC.cmake  LinkManifestC.cmake  OptimizedLinkObjC.cmake  StandaloneC.cmake  StartupC.cmake
src/plugin2/: CMakeLists.txt  MulleObjCLoader+plugin2.h  MulleObjCLoader+plugin2.m  _plugin2-import-private.h  _plugin2-import.h  _plugin2-include-private.h  _plugin2-include.h  import-private.h  import.h  include-private.h  include.h  plugin2-standalone.m  plugin2.h  plugin2.m
src/plugin2/.mulle-env/etc/: environment-global.sh
src/plugin2/.mulle-env/share/: environment-project.sh
src/plugin2/.mulle-sourcetree/etc/: config
src/plugin2/cmake/: HeadersAndSources.cmake  _Headers.cmake  _Sources.cmake
src/plugin2/cmake/share/: CreateLoaderIncObjC.cmake  Environment.cmake  ExecutableObjC.cmake  LinkManifestC.cmake  OptimizedLinkObjC.cmake  StandaloneC.cmake  StartupC.cmake
